app/static/css/problem.css
#content {
    display: flex;
    flex-flow: row;
    width: 100%;
    background-color: white;
}

#statementsBox {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    flex-basis: 50%;
    transition: all 80ms ease-out;
}

#statementsTitle {
    display: flex;
    flex-flow: row;
    height: 80px;
    border-bottom: 1px solid whitesmoke;
}

#statementsTitle.shadow {
    border-bottom: 1px solid #e9e9e9;
    box-shadow: 0 0 20px lightgrey;
}

#goBack {
    margin: 15px;
    height: 50px;
    width: 50px;
}

#problemInfo {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    flex-grow: 1;
    padding: 10px;
}

#problemName {
    padding-right: 20px;
    margin: auto auto auto 0;
    font-size: 25px;
}

#problemLimits {
    display: flex;
    flex-flow: row;
    margin: 0 auto 0 0;
}

#timeLimit {
    padding-right: 20px;
    margin: auto 0 auto 0;
    font-size: 20px;
}

#memoryLimit {
    padding-right: 20px;
    margin: auto 0 auto 0;
    font-size: 20px;
}

#problemScore {
    padding-right: 20px;
    margin: auto 0 auto 0;
    font-size: 20px;
}

#statementsContent {
    position: relative;
    flex-grow: 1;
}

#statementsContentScrollable {
    padding: 20px;
    overflow-y: auto;
}

#statementsLoading {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
}

#statementsLoadingLabel {
    margin: auto;
}

#statementsBox.collapsed #problemScore {
    display: none;
}

#statementsBox.collapsed #problemLimits {
    margin-right: 0;
}

#extraBox {
    position: relative;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    flex-basis: 50%;
    transition: all 80ms ease-out;
    z-index: 1;
}

#extraBox.collapsed {
    flex: 0;
}

#extraBox.collapsed * {
    display: none;
}

#extraBoxCollapse {
    position: absolute;
    top: 50%;
    left: 0;
    height: 60px;
    width: 30px;
    transform: translateY(-50%);
    padding-left: 3px;
    background-color: white;
    border-radius: 0 30px 30px 0;
    font-size: 16px;
    box-shadow: 0 0 10px lightgrey;
}

#extraBoxCollapse:hover {
    background-color: whitesmoke;
}

#extraBoxCollapse:active {
    background-color: #eee;
}

#submitBox {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#submitTitle {
    position: relative;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    padding: 10px 20px;
    height: 80px;
    border-bottom: 1px solid lightgreen;
    box-shadow: 0 0 10px lightgrey;
    z-index: 1;
}

#submitTitle::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 100%;
    height: 12px;
    width: 12px;
    transform: translate(-50%, -50%) rotate(45deg);
    background-color: lightgreen;
}

#submitText {
    padding-right: 20px;
    margin: auto auto auto 0;
    font-size: 25px;
}

#submitScore {
    padding-right: 10px;
    margin: auto 0 auto 0;
    font-size: 20px;
}

#submitContent {
    flex-grow: 1;
    padding: 30px 20px;
    box-shadow: 0 0 15px -5px lightgrey;
}

#taskRow, #languageRow, #chooseFileRow, #submitFileRow {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    margin-bottom: 10px;
}

#taskLabel, #languageLabel, #chooseFileLabel, #submitFileLabel {
    flex-basis: 150px;
    padding: 5px 0;
    margin: auto 10px;
    font-size: 17px;
}

#taskSelect, #languageSelect {
    flex-grow: 1;
    margin-right: 5px;
    width: 200px;
}

#chooseFileInput {
    display: none;
}

#chooseFileButton, #submitFileButton {
    width: 135px;
    text-align: center;
}

#chooseFileName, #submitLoading, #submitSuccess, #submitFail {
    flex-grow: 1;
    padding: 5px 0;
    margin: auto 10px;
    width: 100px;
    font-size: 17px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#submitSuccess {
    color: forestgreen;
    font-weight: bold;
    transition: opacity 300ms linear;
}

#submitFail {
    color: red;
    font-weight: bold;
    transition: opacity 300ms linear;
}

#contestInfoBox {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#contestInfoTitle {
    position: relative;
    display: flex;
    flex-flow: row;
    padding: 10px 20px;
    height: 80px;
    border-bottom: 1px solid lightblue;
    box-shadow: 0 0 10px lightgrey;
    z-index: 1;
}

#contestInfoLabel {
    margin: auto auto auto 0;
    font-size: 25px;
}

#contestInfoContent {
    position: relative;
    flex-grow: 1;
    padding: 30px 20px;
    box-shadow: 0 0 15px -5px lightgrey;
}

#contestInfoContent::after {
    content: "";
    position: absolute;
    bottom: 80px;
    left: 100%;
    height: 50px;
    width: 2px;
    background-color: lightblue;
}

#contestMessagesBox {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#contestMessagesTitle {
    position: relative;
    display: flex;
    flex-flow: row;
    padding: 10px 20px;
    height: 80px;
    border-bottom: 1px solid gold;
    box-shadow: 0 0 10px lightgrey;
    z-index: 1;
}

#contestMessagesLabel {
    margin: auto auto auto 0;
    font-size: 25px;
}

#contestMessagesContent {
    position: relative;
    flex-grow: 1;
    padding: 30px 20px;
    box-shadow: 0 0 15px -5px lightgrey;
}

#contestMessagesContent::after {
    content: "";
    position: absolute;
    bottom: 15px;
    left: 100%;
    height: 50px;
    width: 2px;
    background-color: gold;
}

#rightBox {
    display: flex;
    flex-flow: column;
    border-left: 1px solid whitesmoke;
}

#submitSection {
    display: flex;
    height: 80px;
    border-bottom: 1px solid whitesmoke;
}

#submitExpand {
    margin: auto;
    height: 50px;
    width: 50px;
    font-size: 16px;
}

#submitExpand span {
    padding-right: 2px;
}

#problemNavigation {
    flex-grow: 1;
    font-size: 20px;
    overflow-y: auto;
}

#problemNavigation .action {
    height: 50px;
    width: 50px;
    margin: 15px;
}

#problemNavigation .action.active {
    color: white;
    background-color: rgb(21, 148, 252);
    box-shadow: 0 0 10px lightgrey;
}

#infoSection {
    display: flex;
    flex-flow: column;
    border-top: 1px solid whitesmoke;
    text-align: center;
}

#timeRemaining {
    margin: 15px auto 15px auto;
    color: dimgrey;
    font-size: 14px;
}

#contestTimer {
    color: black;
    font-size: 20px;
    line-height: 35px;
}

#viewContestInfo, #viewContestMessages {
    height: 50px;
    width: 50px;
    margin: 0 auto 15px auto;
    font-size: 16px;
}

@media (max-width: 1000px) {
    #statementsBox.collapsed {
        flex: 0;
    }

    #statementsBox.collapsed * {
        display: none;
    }
}

@media (max-width: 750px) {
    #timeLimit, #memoryLimit {
        display: none;
    }
}

@media (max-width: 550px) {
    #chooseFileLabel, #submitFileLabel {
        display: none;
    }
}

@media (max-width: 500px) {
    #problemScore {
        display: none;
    }
}

